@@ -13,71 +13,70 @@ import lombok.extern.slf4j.Slf4j;
 @Service
 public class VirtualThreadService {
 
-    private final int threadCount = Runtime.getRuntime().availableProcessors();
-    private final ExecutorService executorService = Executors.newFixedThreadPool(threadCount * 2);
-    private final ExecutorService executorService2 = Executors.newVirtualThreadPerTaskExecutor();
+    private final int platformThreadCount = Runtime.getRuntime().availableProcessors();
+    private final ExecutorService fixedThreadPoolExecutor = Executors.newFixedThreadPool(platformThreadCount * 2);
+    private final ExecutorService virtualThreadPerTaskExecutor = Executors.newVirtualThreadPerTaskExecutor();
 
-    public long fixedThreadPool(int task) {
+    public long fixedThreadPool(int taskCount) {
         long startTime = System.currentTimeMillis();
-        log.info("Thread Count {}", threadCount);
-        log.info("newFixedThreadPool");
-        CompletableFuture<?>[] futures = new CompletableFuture[task];
-        for (int i = 0; i < task; i++) {
+        log.info("Testing with Fixed Thread Pool. Available Processors: {}", platformThreadCount);
+        CompletableFuture<?>[] futures = new CompletableFuture[taskCount];
+        for (int i = 0; i < taskCount; i++) {
             final int taskId = i;
             futures[i] = CompletableFuture.supplyAsync(() -> {
                 simulateTask(taskId);
-                return "Task " + taskId + " completed by " + "Visual Thread";
-            }, executorService);
+                return "Task " + taskId + " completed by Platform Thread";
+            }, fixedThreadPoolExecutor);
         }
         CompletableFuture.allOf(futures).join();
         return System.currentTimeMillis() - startTime;
     }
 
-    public long threadVirtual(int task) throws InterruptedException {
+    public long virtualThreadManual(int taskCount) throws InterruptedException {
         long startTime = System.currentTimeMillis();
         List<Thread> threads = new ArrayList<>();
-        for (int i = 0; i < task; i++) {
-            int taskId = i;
+        for (int i = 0; i < taskCount; i++) {
+            final int taskId = i;
             Thread thread = Thread.startVirtualThread(() -> simulateTask(taskId));
             threads.add(thread);
         }
         for (Thread thread : threads) {
             thread.join();
         }
+        log.info("Total Virtual Threads spawned: {}", threads.size());
         return System.currentTimeMillis() - startTime;
     }
 
-    public long virtualThreadPerTaskExecutor(int task) {
+    public long virtualThreadPerTaskExecutor(int taskCount) {
         long startTime = System.currentTimeMillis();
-        log.info("newVirtualThreadPerTaskExecutor");
-        CompletableFuture<?>[] futures = new CompletableFuture[task];
-        for (int i = 0; i < task; i++) {
+        log.info("Testing with Virtual Thread Per Task Executor");
+
+        CompletableFuture<?>[] futures = new CompletableFuture[taskCount];
+        for (int i = 0; i < taskCount; i++) {
             final int taskId = i;
             futures[i] = CompletableFuture.supplyAsync(() -> {
                 simulateTask(taskId);
-                return "Task " + taskId + " completed by " + "Visual Thread";
-            }, executorService2);
+                return "Task " + taskId + " completed by Virtual Thread";
+            }, virtualThreadPerTaskExecutor);
         }
         CompletableFuture.allOf(futures).join();
         return System.currentTimeMillis() - startTime;
     }
 
-    public String oneThread(int param) {
-        Thread thread = new Thread();
-        thread.start();
-        for (int i = 0; i < param; i++) {
+    public String oneThreadSync(int taskCount) {
+        for (int i = 0; i < taskCount; i++) {
             simulateTask(i);
         }
         return "Success";
     }
 
-    public void simulateTask(int taskId) {
+    private void simulateTask(int taskId) {
         try {
-            log.info(Thread.currentThread() + "Virtual thread : task ID => " + taskId);
-            Thread.sleep(1000);
+            log.info("Thread: {} | Task ID: {} | Status: Starting", Thread.currentThread().getName(), taskId);
+            Thread.sleep(1000); // จำลองการรอ (Blocking I/O)
         } catch (InterruptedException e) {
             Thread.currentThread().interrupt();
+            log.error("Task {} interrupted", taskId);
         }
     }
-
 }
